@@ -2,3 +2,5 @@
 
 -now to update this repos use: git push repoName HEAD:master
 (since master is where the code files are, as main is behind)
+
+-Got while loop and PDO: Fetch Assoc array working, blobs are not readable tho
